Fixed weather description not showing

--- a/css/weatherCard.css
+++ b/css/weatherCard.css
@@ -65,7 +65,7 @@
 }
 
 .weather-snow {
-    background: linear-gradient(to top, #6b7071, #def1f9);
+    background: linear-gradient(to top, #5e5f60, #a3cddf);
 }
 
 .card-city,
